--- a/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer.vcxproj
+++ b/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer.vcxproj
@@ -18,6 +18,12 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="USER.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="USER.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{FFA62ED9-4528-431F-80C7-B1454F4C54FA}</ProjectGuid>
@@ -137,8 +143,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
