--- a/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer.vcxproj
+++ b/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer.vcxproj
@@ -19,9 +19,19 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CLASS.h" />
+    <ClInclude Include="COURSE.h" />
+    <ClInclude Include="SCOREBOARD.h" />
+    <ClInclude Include="STAFF.h" />
+    <ClInclude Include="STUDENT.h" />
     <ClInclude Include="USER.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CLASS.cpp" />
+    <ClCompile Include="COURSE.cpp" />
+    <ClCompile Include="SCOREBOARD.cpp" />
+    <ClCompile Include="STAFF.cpp" />
+    <ClCompile Include="STUDENT.cpp" />
     <ClCompile Include="USER.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
