--- a/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer.vcxproj
+++ b/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer.vcxproj
@@ -19,20 +19,29 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CLASS.cpp" />
+    <ClCompile Include="COURSE.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="STAFF.cpp" />
+    <ClCompile Include="Student.cpp" />
+    <ClCompile Include="typeConverter.cpp" />
+    <ClCompile Include="USER.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="course.txt" />
+    <Text Include="user.txt" />
+  </ItemGroup>
+  <ItemGroup>
     <ClInclude Include="CLASS.h" />
     <ClInclude Include="COURSE.h" />
-    <ClInclude Include="SCOREBOARD.h" />
+    <ClInclude Include="LinkedList\singly_linkedList.h" />
     <ClInclude Include="STAFF.h" />
-    <ClInclude Include="STUDENT.h" />
+    <ClInclude Include="Student.h" />
+    <ClInclude Include="typeConverter.h" />
     <ClInclude Include="USER.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CLASS.cpp" />
-    <ClCompile Include="COURSE.cpp" />
-    <ClCompile Include="SCOREBOARD.cpp" />
-    <ClCompile Include="STAFF.cpp" />
-    <ClCompile Include="STUDENT.cpp" />
-    <ClCompile Include="USER.cpp" />
+    <None Include="19CLC10_BugDestroyer.cd" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
