--- a/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer.vcxproj.filters
+++ b/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer.vcxproj.filters
@@ -15,43 +15,58 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="USER.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="STAFF.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="CLASS.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="COURSE.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="SCOREBOARD.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="STUDENT.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="USER.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="STAFF.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CLASS.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="COURSE.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="SCOREBOARD.cpp">
+    <ClCompile Include="CLASS.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="STUDENT.cpp">
+    <ClCompile Include="typeConverter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Student.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="user.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+    <Text Include="course.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="typeConverter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedList\singly_linkedList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="USER.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="STAFF.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="COURSE.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CLASS.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Student.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="19CLC10_BugDestroyer.cd" />
   </ItemGroup>
 </Project>
