--- a/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer.vcxproj.filters
+++ b/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Student.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Lecturer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="user.txt">
@@ -63,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Student.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Lecturer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
