fisnish checked feature

--- a/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer.vcxproj.filters
+++ b/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer.vcxproj.filters
@@ -42,6 +42,12 @@
     <ClCompile Include="ioHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SCOREBOARD.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CheckinList.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="course.txt" />
@@ -75,6 +81,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ioHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SCOREBOARD.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CheckinList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
