--- a/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer.vcxproj
+++ b/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer.vcxproj
@@ -19,11 +19,13 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CheckinList.cpp" />
     <ClCompile Include="CLASS.cpp" />
     <ClCompile Include="COURSE.cpp" />
     <ClCompile Include="ioHelper.cpp" />
     <ClCompile Include="Lecturer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SCOREBOARD.cpp" />
     <ClCompile Include="STAFF.cpp" />
     <ClCompile Include="Student.cpp" />
     <ClCompile Include="typeConverter.cpp" />
@@ -33,12 +35,14 @@
     <Text Include="course.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CheckinList.h" />
     <ClInclude Include="CLASS.h" />
     <ClInclude Include="COURSE.h" />
     <ClInclude Include="ioColor.h" />
     <ClInclude Include="ioHelper.h" />
     <ClInclude Include="Lecturer.h" />
     <ClInclude Include="LinkedList\singly_linkedList.h" />
+    <ClInclude Include="SCOREBOARD.h" />
     <ClInclude Include="STAFF.h" />
     <ClInclude Include="Student.h" />
     <ClInclude Include="typeConverter.h" />
