--- a/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer.vcxproj
+++ b/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer/KTLT_19CLC10_BugDestroyer.vcxproj
@@ -33,6 +33,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="course.txt" />
+    <Text Include="Data\user.txt" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CheckinList.h" />
